Improve host component and documentation on the very same